# nivida-chatbot-contest

./: .gitignore  README.MD
chatbot/: pyproject.toml
chatbot/src/: frontend.py  llm_framework
